  |              point the client is assumed to be stable. Code that
  |              would make clients incompatible with previous clients or
  |              proxies will be a accompanied by 'client contest' change.
  `------------- Denotes a client rewrite.

==========================================================================
Version change log: $Id: CHANGES.txt,v 1.14.2.64 2004/05/23 00:42:52 kakace Exp $
==========================================================================

2.9000
------
2.9008-491  chg: all: Disabled OGR (Phase 1) contest
            fix: macosx: Fixed an issue caused by white spaces in file paths.
            imp: macosx: Reworked the Startup Items implementation.
            imp: all: Reworked the activity display in test mode (OGR-P2)
            imp: ppc: Select GARSP 5.1x Scalar by default on PPC 74x7/G5
            imp: ppc: Faster OGR-P2 cores.

2.9008-490  new: all: Enable OGR-24 and OGR-25 Phase 2 (finalization)
            new: amigaos: native OS4 port

2.9007-489  new: x86: new rc5-72 cores (#3265, #3398)
            fix: ppc: now detects 745/755 (G3) cpu under linux
            chg: x86: core preselection (#3477, #3580, #3602, #3621, #3625)
            imp: x86: cpu identification (#3593, #3627)
            chg: x86-linux: new build style using uClibc

2.9007-488  fix: macosx: Undefined symbol issue (10.1.5, #3578)
            imp: all: Force partial work to be restarted when fetched from a
                      shared buffer by a different user.
            imp: macosx: somewhat fix the "Pause if running" option (#3566)
            new: morphos: MorphOS pre-release
            fix: all: Trashed OGR buffers (bug introduced in 2.9007-487)
            fix: all: Fixed checkpoint file problem introduced by the user
                      check.

2.9007-487  fix: amigaos: 68k: fixed a race condition adding public port
            fix: amigaos: fixed a race quitting the cruncher thread
            new: MorphOS port