@@ -219,7 +219,11 @@ h2 {
   Client Options. Activate the monitoring (option 8), then define the temperature
   thresholds (option 9). Please note this function relies upon dedicated 
   hardware (either the Thermal Assist Unit embedded into some PowerPC processors, 
-  or machine-specific sensors). As such, it may or may not work as expected.</p>
+  or machine-specific sensors). As such, it may or may not work as expected.<br>
+  If the monitoring is enabled, clients in version 2.9008.491 or better will
+  display the current CPU temperature upon startup to help you determine the
+  temperature thresholds. If no sensor can be found, a message will tell you
+  this feature is not available.</p>
 <a name="bugs"></a>
 <h2>Problems and bugs</h2>
 <p>If you suspect you have found a bug in the client, here are the steps you should
