@@ -32,7 +32,7 @@
  *   - #3338 : kIOMasterPortDefault doesn't exist prior Mac OS 10.2 (2.9006.485)
  *   - #3343 : The object filled by CFNumberGetValue shall not be released (2.9006.485)
  *
- *  $Id: temperature.cpp,v 1.1.2.1 2003/11/11 02:38:55 kakace Exp $
+ *  $Id: temperature.cpp,v 1.1.2.2 2004/05/23 17:07:59 kakace Exp $
  */
 
 #include <string.h>
@@ -42,6 +42,7 @@
 #include <mach/mach_error.h>
 #include <IOKit/IOKitLib.h>
 #include <CoreFoundation/CFNumber.h>
+#include "logstuff.h"
 
 SInt32 macosx_cputemp(void);
 
@@ -210,6 +211,14 @@ SInt32 macosx_cputemp(void) {
 
 						/* No temperature support */
             source = 0;
+    }
+
+    if (source > 0) {
+      float k = temp / 100.0;
+      Log("Current CPU temperature : %5.2fK (%2.2fC)\n", k, k-273.15);
+    }
+    else {
+      Log("Temperature monitoring disabled (no sensor found)\n");
     }
 
     return temp;
