@@ -21,7 +21,7 @@ Version bump guide:
   `------------- Denotes a client rewrite.
 
 ==========================================================================
-Version change log: $Id: CHANGES.txt,v 1.14.2.64 2004/05/23 00:42:52 kakace Exp $
+Version change log: $Id: CHANGES.txt,v 1.14.2.65 2004/05/23 17:08:10 kakace Exp $
 ==========================================================================
 
 2.9000
@@ -29,6 +29,7 @@ Version change log: $Id: CHANGES.txt,v 1.14.2.64 2004/05/23 00:42:52 kakace Exp 
 2.9008-491  chg: all: Disabled OGR (Phase 1) contest
             fix: macosx: Fixed an issue caused by white spaces in file paths.
             imp: macosx: Reworked the Startup Items implementation.
+            imp: macosx: Display CPU temp. upon startup (if enabled/available)
             imp: all: Reworked the activity display in test mode (OGR-P2)
             imp: ppc: Select GARSP 5.1x Scalar by default on PPC 74x7/G5
             imp: ppc: Faster OGR-P2 cores.
